--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-modal": "^13.0.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
